# OpenBTMapGen

./: .gitignore  .project  .replit  Cargo.toml  README.md  build.rs  maps.yml  soil_test_main.png.aux.xml  soil_types.yml  vegetation_types.yaml
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: bitflags-2.4.1.crate  bytemuck-1.14.0.crate  crossbeam-channel-0.5.8.crate  crossbeam-deque-0.8.3.crate  crossbeam-epoch-0.9.15.crate  crossbeam-utils-0.8.16.crate  deflate-0.8.6.crate  exr-1.71.0.crate  fdeflate-0.3.1.crate  fl2rust-0.5.17.crate  fltk-1.4.19.crate  fluid-parser-0.1.14.crate  flume-0.11.0.crate  getrandom-0.2.11.crate  gif-0.11.4.crate  gif-0.12.0.crate  half-2.2.1.crate  image-0.23.14.crate  image-0.24.7.crate  jpeg-decoder-0.1.22.crate  jpeg-decoder-0.3.0.crate  memoffset-0.9.0.crate  miniz_oxide-0.3.7.crate  num-rational-0.4.1.crate  num-traits-0.2.17.crate  png-0.16.8.crate  png-0.17.10.crate  rayon-1.8.0.crate  rayon-core-1.12.0.crate  scoped_threadpool-0.1.9.crate  smallvec-1.11.2.crate  tiff-0.6.1.crate  tiff-0.9.0.crate  ttf-parser-0.20.0.crate  weezl-0.1.7.crate
.cargo/registry/src/index.crates.io-6f17d22bba15001f/adler32-1.2.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/bytemuck-1.14.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/crossbeam-channel-0.5.8/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/crossbeam-epoch-0.9.15/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/crossbeam-utils-0.8.16/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/deflate-0.8.6/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/exr-1.71.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
.cargo/registry/src/index.crates.io-6f17d22bba15001f/fdeflate-0.3.1/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/fl2rust-0.5.17/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/flate2-1.0.28/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/fltk-1.4.19/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/fltk-sys-1.4.19/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/fluid-parser-0.1.14/: .cargo_vcs_info.json  Cargo.toml
.github/workflows/: rust.yml
.lapce/: run.toml
src/: erosion.rs  fastlem_opt.rs  hydro.rs  main.rs  menu_bar.rs  soil_def.rs  topo_settings.rs  topography.rs  topography_pane.rs  ui.fl  ui.rs  utils.rs  weather.rs  weather_pane.rs  weather_settings.rs
src/plant_maker/: config.rs  edaphology.rs  hydrology.rs  insolation.rs  orography.rs  probabilities.rs  soilmaker.rs
src/soil/: config.rs  edaphology.rs  hydrology.rs  insolation.rs  mod.rs  orography.rs  probabilities.rs  soilmaker.rs
src/soil_binder/: Cargo.toml
src/soil_binder/src/: lib.rs
utils/wbt/: settings.json
(+26 files in other folders)
