[package]
name = "OpenBattlesimGen"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soil_binder = {path = "src/soil_binder"}
errorfunctions = "0.2.0"
fltk = { git = "https://github.com/fltk-rs/fltk-rs", features = ["enable-glwindow"] }
image_crate = { package = "image", version =  "0.24.7" }
image_old = {package = "image", version= "0.23.14", default-features = false}
imageproc = "0.23.0"
map-range = "0.1.2"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
noise = {version = "0.8.2", features = ["images"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
ron = "0.8.1"
three-d = { version = "0.16.3", features=["headless"] }
three-d-asset = { version = "0.6.0", features = ["png"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
flo_curves = "0.7.2"
colorgrad = "0.6.2"
ordered-float = {version = "4.2.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
fastlem = "0.1.4"
terrain-graph = "1.0.1"

color-reduce = {git = "https://github.com/Seon82/color-reduce-rs.git"}
serde_yaml = "0.9.25"
serde_json = "1.0.105"
posterust = "0.0.1"
simplelog = "0.12.2"
photon-rs = {git = "https://github.com/silvia-odwyer/photon.git"}


[build-dependencies]
fl2rust = "0.5.17"
